# nbody

./: CMakeLists.txt  nbody_test.cpp
include/: nbody_cpu.hpp  nbody_cuda.cuh
src/: nbody_cpu.cpp  nbody_cuda.cu
